--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,12 +9,12 @@
          id="WebApp_9" version="2.4">
   <display-name>Servlet Request Info</display-name>
   <servlet>
-    <servlet-name>support</servlet-name>
+    <servlet-name>DummyServlet</servlet-name>
     <servlet-class>by.Egor.DummyServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>support</servlet-name>
-    <url-pattern>/help-service/v1/support</url-pattern>
+    <servlet-name>DummyServlet</servlet-name>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
 </web-app>
